picture on details dont worko

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,8 @@
 
                 <!-- START DZIEDZICZENIA -->
                 {% block content %}{% endblock %}
-                <!-- START DZIEDZICZENIA -->
+                <!-- KONIEC DZIEDZICZENIA -->
+                
                 <p class="lead">Kodilla moduł 10.2</p>
                 <p>Kodilla moduł 10.2</p>
             </div>
