--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,15 @@
        <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
    </div>
+
+
+   <div class="col-lg-12 mb-4">
+    {% for genre in genres %}
+    <a href="{{ url_for('homepage', list_type="top_rated") }}" class="btn btn-outline-success" data-toggle="button" aria-pressed="false" autocomplete="on">{{ genre.name }}</a>
+     {% endfor %}
+    </div>
+
+
    {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
        <div class="card h-100">
